# allora-forge-builder-kit

./: .deployignore  .env.example  .gitignore  .submission_lock.json  .wallet_name  ACCOUNT_NOT_FOUND_FIX.md  ALLORA_LEADERBOARD_VISIBILITY_GUIDE.md  AUTOMATION_COMPLETE.md  AUTOMATION_GUIDE.md  AWS_DEPLOYMENT_GUIDE.md  AWS_QUICK_PROMPT.txt  AWS_QUICK_START.md  CLEAN_PIPELINE_REFACTORING.md  CODE_ANALYSIS_ENV_VALIDATION.md  COMPETITION_DEADLINE_GUIDE.md  COMPETITION_DEADLINE_QUICK_REF.md  COMPETITION_SUBMISSION_GUIDE.md  COMPLETION_REPORT.md  COMPREHENSIVE_DATA_FAILURE_FIXES.md  CONSOLIDATION_CHANGES.md  CONSOLIDATION_SUMMARY.md  CONTINUOUS_OPERATION_STATUS.md  DAEMON_DEPLOYMENT.md  DAEMON_GUIDE.md  DAEMON_IMPLEMENTATION.md  DAEMON_QUICK_START.md  DAEMON_README.md  DAEMON_STATUS.md  DELIVERY_SUMMARY.md  DEPLOYMENT_COMMANDS.sh  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE.txt  DEPLOYMENT_COMPLETE_VERIFIED.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ONECOMMAND.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_VALIDATION_REPORT.md  DEPLOY_HEADLESS.md  DOCUMENTATION_INDEX.md  (+196 more)
allora_forge_builder_kit/: # Code Citations.md  __init__.py  alpha_features.py  cli.py  competition_deadline.py  environment.py  logging_utils.py  pipeline.py  rpc_utils.py  schedule.py  submission.py  submission_log.py  submission_validator.py  utils.py  workflow.py
artifacts/: latest_submission.json
backup/: features.json  latest_submission.json  worker_payload.json
config/: pipeline.yaml
legacy_scripts/: deploy_worker.sh  diagnose_model_logic.sh  diagnose_nonce.sh  diagnose_pipeline.sh  (+10 more)
(+138 files in other folders)
