[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-7d-log-return-forecast"
version = "0.1.0"
description = "Minimal 7-Day BTC/USD Log-Return Forecast & Submission"
authors = [{ name = "MISHHF93" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "xgboost",
    "requests",
]

[project.urls]
Homepage = "https://github.com/MISHHF93/allora-forge-builder-kit"

[tool.setuptools.packages.find]
# No packages to find, single script

